--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-/* CSS Reset */
+
+/*------ CSS Reset ---------*/
+
 * {
   margin: 0px;
   padding: 0px;
   background-color: whitesmoke;
 }
-/* Navbar-Section */
+
+/* -------Navbar-Section ---------*/
 .navbar {
   margin-top: 16px;
   display: flex;
@@ -16,7 +19,8 @@
   height: 40px;
   width: 130px;
 }
-#list {
+/*------------ Menu-List-------------- */
+#menu-list {
   display: flex;
   list-style: none;
   margin: 15px 2px;
@@ -24,11 +28,12 @@
   align-items: center;
 }
 .list-item {
+  margin: 5px 30px;
 }
 .list-item a {
   text-decoration: none;
   color: black;
-  padding: 5px 35px;
+  padding: 5px 5px;
   font-size: 25px;
 }
 .list-item a:hover {
@@ -53,7 +58,7 @@
   height: 30px;
   width: 40%;
 }
-
+/*----------- Global-img-section ---------*/
 #global-img {
   display: inline-block;
   position: absolute;
@@ -65,7 +70,7 @@
   width: 50px;
 }
 
-/* photo-heading-section */
+/* --------photo-heading-section -----------*/
 
 #photo-heading-section {
   display: flex;
@@ -88,7 +93,7 @@
   height: 50vh;
   width: 30%;
 }
-/* heading-section-icons */
+/*-------------- heading-section-icons ---------*/
 
 #heading-section-icons {
   margin-left: 60px;
@@ -121,7 +126,7 @@
   color: black;
   font-size: 15px;
 }
-/* button-section */
+/*------------- button-section --------------*/
 
 #heading-section .btn {
   border: 2px solid black;
@@ -136,7 +141,7 @@
   color: aliceblue;
   background-color: black;
 }
-/* contactUs-section */
+/*------------- contactUs-section ------------*/
 
 #contactus-section {
   text-align: center;
